@@ -1,6 +1,10 @@
 package com.projet.mycose.controller;
 
 import com.projet.mycose.dto.*;
+import com.projet.mycose.modele.ApplicationStage;
+import com.projet.mycose.modele.Etudiant;
+import com.projet.mycose.modele.Programme;
+import com.projet.mycose.service.ApplicationStageService;
 import com.projet.mycose.service.OffreStageService;
 import jakarta.validation.ConstraintViolationException;
 import org.junit.jupiter.api.BeforeEach;
@@ -10,6 +14,7 @@ import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.test.context.support.WithMockUser;
 
 import java.io.IOException;
 import java.nio.file.AccessDeniedException;
@@ -23,11 +28,12 @@ public class OffreStageControllerTest {
 
     @Mock
     private OffreStageService offreStageService;
+    @Mock
+    private ApplicationStageService applicationStageService;
 
     @InjectMocks
     private OffreStageController offreStageController;
 
-    private String token;
     private Long id;
     private UploadFicherOffreStageDTO uploadFicherOffreStageDTO;
     private FichierOffreStageDTO fichierOffreStageDTO;
@@ -36,10 +42,10 @@ public class OffreStageControllerTest {
     private OffreStageDTO offreStageDTO;
     private List<OffreStageAvecUtilisateurInfoDTO> offreStageAvecUtilisateurInfoDTOList;
     private List<OffreStageDTO> offreStageDTOList;
+    private Etudiant etudiant;
 
     @BeforeEach
     void setup() {
-        token = "Bearer sampleToken";
         id = 1L;
 
         uploadFicherOffreStageDTO = new UploadFicherOffreStageDTO();
@@ -52,69 +58,79 @@ public class OffreStageControllerTest {
 
         offreStageDTO = new OffreStageDTO();
 
-        offreStageAvecUtilisateurInfoDTOList = Arrays.asList(offreStageAvecUtilisateurInfoDTO);
-        offreStageDTOList = Arrays.asList(offreStageDTO);
+        offreStageAvecUtilisateurInfoDTOList = Collections.singletonList(offreStageAvecUtilisateurInfoDTO);
+        offreStageDTOList = List.of(offreStageDTO);
+
+        etudiant = Etudiant.builder()
+                .id(1L)
+                .prenom("Roberto")
+                .nom("Berrios")
+                .numeroDeTelephone("438-508-3245")
+                .courriel("roby@gmail.com")
+                .motDePasse("Roby123$")
+                .programme(Programme.TECHNIQUE_INFORMATIQUE)
+                .build();
     }
 
     @Test
     void uploadFile_Success() throws Exception {
-        when(offreStageService.saveFile(uploadFicherOffreStageDTO, token)).thenReturn(fichierOffreStageDTO);
+        when(offreStageService.saveFile(uploadFicherOffreStageDTO)).thenReturn(fichierOffreStageDTO);
 
-        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO, token);
+        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO);
 
         assertNotNull(response);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertEquals(fichierOffreStageDTO, response.getBody());
-        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO, token);
+        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO);
     }
 
     @Test
     void uploadFile_ConstraintViolationException() throws Exception {
         ConstraintViolationException exception = mock(ConstraintViolationException.class);
         when(exception.getConstraintViolations()).thenReturn(new HashSet<>());
-        when(offreStageService.saveFile(uploadFicherOffreStageDTO, token)).thenThrow(exception);
+        when(offreStageService.saveFile(uploadFicherOffreStageDTO)).thenThrow(exception);
 
-        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO, token);
+        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO);
 
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO, token);
+        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO);
     }
 
     @Test
     void uploadFile_IOException() throws Exception {
-        when(offreStageService.saveFile(uploadFicherOffreStageDTO, token)).thenThrow(new IOException("File error"));
+        when(offreStageService.saveFile(uploadFicherOffreStageDTO)).thenThrow(new IOException("File error"));
 
-        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO, token);
+        ResponseEntity<?> response = offreStageController.uploadFile(uploadFicherOffreStageDTO);
 
         assertNotNull(response);
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         assertNull(response.getBody());
-        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO, token);
+        verify(offreStageService, times(1)).saveFile(uploadFicherOffreStageDTO);
     }
 
     @Test
     void uploadForm_Success() throws Exception {
-        when(offreStageService.saveForm(formulaireOffreStageDTO, token)).thenReturn(formulaireOffreStageDTO);
+        when(offreStageService.saveForm(formulaireOffreStageDTO)).thenReturn(formulaireOffreStageDTO);
 
-        ResponseEntity<FormulaireOffreStageDTO> response = offreStageController.uploadForm(formulaireOffreStageDTO, token);
+        ResponseEntity<FormulaireOffreStageDTO> response = offreStageController.uploadForm(formulaireOffreStageDTO);
 
         assertNotNull(response);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertEquals(formulaireOffreStageDTO, response.getBody());
-        verify(offreStageService, times(1)).saveForm(formulaireOffreStageDTO, token);
+        verify(offreStageService, times(1)).saveForm(formulaireOffreStageDTO);
     }
 
     @Test
     void uploadForm_AccessDeniedException() throws Exception {
-        when(offreStageService.saveForm(formulaireOffreStageDTO, token)).thenThrow(new AccessDeniedException("Access Denied"));
+        when(offreStageService.saveForm(formulaireOffreStageDTO)).thenThrow(new AccessDeniedException("Access Denied"));
 
         AccessDeniedException exception = assertThrows(AccessDeniedException.class, () -> {
-            offreStageController.uploadForm(formulaireOffreStageDTO, token);
+            offreStageController.uploadForm(formulaireOffreStageDTO);
         });
 
         assertEquals("Access Denied", exception.getMessage());
-        verify(offreStageService, times(1)).saveForm(formulaireOffreStageDTO, token);
+        verify(offreStageService, times(1)).saveForm(formulaireOffreStageDTO);
     }
 
     @Test
@@ -208,14 +224,36 @@ public class OffreStageControllerTest {
     }
 
     @Test
-    void getMyOffres_Success() {
-        when(offreStageService.getAvailableOffreStagesForEtudiant(token)).thenReturn(offreStageDTOList);
+    void getMyOffres_Success() throws AccessDeniedException {
+        when(offreStageService.getAvailableOffreStagesForEtudiant()).thenReturn(offreStageDTOList);
 
-        ResponseEntity<List<OffreStageDTO>> response = offreStageController.getMyOffres(token);
+        ResponseEntity<List<OffreStageDTO>> response = offreStageController.getMyOffres();
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(offreStageDTOList, response.getBody());
-        verify(offreStageService, times(1)).getAvailableOffreStagesForEtudiant(token);
+        verify(offreStageService, times(1)).getAvailableOffreStagesForEtudiant();
+    }
+
+    @Test
+    void getAllEtudiantQuiOntAppliquesAUneOffreTest() {
+        ApplicationStageAvecInfosDTO applicationStageDTO = new ApplicationStageAvecInfosDTO();
+        applicationStageDTO.setEtudiant_id(1L);
+        applicationStageDTO.setId(1L);
+        applicationStageDTO.setOffreStage_id(1L);
+        applicationStageDTO.setStatus(ApplicationStage.ApplicationStatus.ACCEPTED);
+        List<ApplicationStageAvecInfosDTO> applicationStageDTOList = new ArrayList<>();
+        applicationStageDTOList.add(applicationStageDTO);
+        List<EtudiantDTO> etudiantsList = new ArrayList<>();
+        etudiantsList.add(EtudiantDTO.toDTO(etudiant));
+        when(applicationStageService.getAllApplicationsPourUneOffreById(1L)).thenReturn(applicationStageDTOList);
+        when(offreStageService.getEtudiantsQuiOntAppliquesAUneOffre(any())).thenReturn(etudiantsList);
+
+        ResponseEntity<List<EtudiantDTO>> response = offreStageController.getAllEtudiantQuiOntAppliquesAUneOffre(1L);
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(etudiantsList, response.getBody());
+        verify(offreStageService, times(1)).getEtudiantsQuiOntAppliquesAUneOffre(applicationStageDTOList);
     }
 }
